# reddit-topics-aggregator

./: .bumpversion.cfg  .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yaml
docs/: cli.rst  conf.py  index.md  requirements.txt
src/reddit_topics_aggregator/: __init__.py  __main__.py  cli.py  package_metadata.py  reddit_client_builder.py
src/reddit_topics_aggregator/cli/: __init__.py  connect.py  exception_handling.py  options.py  topics.py
tests/: conftest.py  test_cli.py  test_package_metadata.py  test_reddit_client_builder.py  test_simple.py
tests/cli/: test_cli.py  test_connect.py  test_topics.py
